k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: www.windrunner0707.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transaction-system-frontend
                port:
                  number: 80
